--- a/pages/figures.html
+++ b/pages/figures.html
@@ -20,5 +20,13 @@
                 <li>החוטפים והנשיא אידי אמין מאוגנדה</li>
             </ul></section>
     </aside>
+     <nav>
+            <ul>
+                <li><a href="origins.html">החטיפה</a></li>
+                <li><a href="figures.html">הדמויות הפועלות</a></li>
+                <li><a href="artifacts.html">הפריטים</a></li>
+                <li><a href="legacy.html">מורשת הקרב</a></li>
+            </ul>
+        </nav>
 </body>
 </html>
