--- a/pages/origins.html
+++ b/pages/origins.html
@@ -20,6 +20,7 @@
         ב־27 ביוני 1976 המריא מטוס אייר פראנס מנתב"ג לפריז, עם עצירת ביניים באתונה. לאחר ההמראה מאתונה, השתלטו ארבעה מחבלים , שניים מארגון החזית העממית לשחרור פלסטין ושניים מארגון גרמני שמאלני קיצוני , על המטוס, והכריחו אותו לנחות באנטבה, אוגנדה. שם הם קיבלו גיבוי מהדיקטטור אידי אמין, שהיה בעל ברית שלהם.  
         החוטפים דרשו את שחרורם של עשרות מחבלים כלואים, ואיימו לרצוח את בני הערובה אם ישראל לא תיענה לדרישות. במשך מספר ימים, הממשלה שקלה את צעדיה בקפדנות. בעוד העולם עוקב בדאגה, מוסד וצה"ל החלו לתכנן מבצע נועז ובלתי ייאמן: חילוץ החטופים בעומק אפריקה.
     </p>
+    <a href="#fatch">לעובדות קצרות ומעניינות</a>
 </article>
 
             </p>
@@ -40,9 +41,17 @@
                         שדה התעופה בו הוחזקו החטופים
                     </figcaption>
                 </figure>
+                <section id="location">
+                    <figure>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3989.8170835750634!2d32.44524852642187!3d0.04511336438283237!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x177d86cd37ba81af%3A0x9daba139d6433d1f!2z16DXntecINeU16rXoteV16TXlCDXlNeR15nXoNec15DXldee15kg15DXoNeY15HXlA!5e0!3m2!1siw!2sil!4v1754313608572!5m2!1siw!2sil" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <figcaption>
+                        מיקום גוגל מפס לשדה התעופה באנטבה
+                    </figcaption>
+                    </figure>
+                </section>
             </ul></section>
         </aside>
-        <a href="#fatch">לעובדות קצרות ומעניינות</a>
+        
         <details>
             <summary>
                 ??רוצים לדעת מה בדיוק אמרו המחבלים
