--- a/pages/origins.html
+++ b/pages/origins.html
@@ -11,7 +11,7 @@
              מבצע אנטבה (מבצע יונתן)
         </h1>
         <b>
-            ב־1976 מטוס שנחטף על ידי מחבלים נחת באוגנדה. צה"ל ביצע מבצע נועז לחילוץ החטופים – 4000 ק"מ מהבית. יוני נתניהו נהרג בפעולה.
+            ב־1976 מטוס שנחטף על ידי מחבלים נחת באוגנדה. צה"ל ביצע מבצע נועז לחילוץ החטופים  4000 ק"מ מהבית. יוני נתניהו נהרג בפעולה.
         </b>
         <article>
             <p>
