--- a/pages/artifacts.html
+++ b/pages/artifacts.html
@@ -21,7 +21,17 @@
                         המטוס ממנו נחטפו האזרחים
                     </figcaption>
                 </figure>
-                <li>תמונות מהמסוק</li>
+                <li>תמונות מהמטוסים</li>
+                <details>
+                    <summary>למרצדס המפורסמת</summary>
+                    <img src="https://haruv.gal-ed.co.il/view_files/HeapItem_pic/003768/HP_003768_26.jpg" alt="">
+                </details>
+                <figure>
+                    <img src="https://haruv.gal-ed.co.il/view_files/HeapItem_pic/003768/HP_003768_24.jpg" alt="" width="350">
+                    <figcaption>
+                        צוות חיל האוויר של אחד ממטוסי ההרקולס
+                    </figcaption>
+                </figure>
                 <li>החולצה של יוני נתניהו (נמצאת ביד יערי)</li>
                 <li>כלי נשק, מפות, קטעי וידאו</li>
             </ul></section>
