--- a/pages/legacy.html
+++ b/pages/legacy.html
@@ -16,6 +16,12 @@
         <section><ul>
             <li>איך המבצע השפיע על צה"ל וישראל</li>
             <li>סרטים, ספרים ושמות רחובות לזכרו</li>
+            <p>
+                רחוב ע''ש יהונתן נתניהו (יוני) בפתח תקוה
+אחד הלוחמים והמפקדים המעולים ביותר שהיו לצה"ל. חייל שסימל בדמותו את הייחוד של קצין צה"ל לעומת קצין בצבאות אחרים. יוני היה לוחם נועז, מפקד שקול ואדם חושב. הוא ידע תמיד לקראת מה הוא הולך, ועשה את הדבר הנכון בזמן הנכון. דוגמה לכך הוא נתן בקרב שנערך במלחמת יום הכיפורים ברמת הגולן: היחידה נקלעה למארב סורי בשטח חשוף, ואחד הקצינים נהרג. יוני קם ממקומו ופקד, בשקט נפשי ובנחישות על הכוח, שהסתער אחריו על הסורים. באחד ממכתביו כתב יוני דברים אלה:
+"בדברי על העבר אני מתכוון לא רק לעברי האישי, אלא לצורה בה אני רואה את עצמי כחלק בלתי נפרד,כחוליה בשרשרת קיומנו ועצמאות ישראל".
+תכנן את מבצע אנטבה, אחד המבצעים הנועזים ביותר של צה"ל. כוח של יחידות מובחרות הוטס במטוסי הרקולס לאוגנדה, כדי לשחרר נוסעים ישראלים ויהודים משביים בידי טרוריסטים ערבים ושותפיהם הגרמנים. בפעולה הקרבית, שיוני פיקד עליה, הוא נפגע מאש החיילים האוגדנים ונהרג.
+            </p>
             <li>נאומים של ראשי מדינות על המבצע</li>
             <li>ההשפעה על מבצעים נועזים בעתיד (כמו מבצע שלמה)</li>
         </ul></section>
