--- a/pages/artifacts.html
+++ b/pages/artifacts.html
@@ -44,5 +44,10 @@
                 <li><a href="legacy.html">מורשת הקרב</a></li>
             </ul>
         </nav>
+        <footer>
+            <p>
+                © 2025 מבצע אנטבה  אתר היסטוריה
+            </p>
+        </footer>
 </body>
 </html>
