--- a/pages/origins.html
+++ b/pages/origins.html
@@ -10,6 +10,9 @@
         <h1 id="title" class="">
              מבצע אנטבה (מבצע יונתן)
         </h1>
+        <figure>
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQgj4LjzK0wG_zPQgYZCVcd6YUocjlsYs3uCQ&s" alt="סמל המבצע">
+        </figure>
         <b>
             ב־1976 מטוס שנחטף על ידי מחבלים נחת באוגנדה. צה"ל ביצע מבצע נועז לחילוץ החטופים  4000 ק"מ מהבית. יוני נתניהו נהרג בפעולה.
         </b>
@@ -82,7 +85,7 @@
         </nav>
         <footer>
             <p>
-                © 2025 מבצע אנטבה – אתר היסטוריה
+                © 2025 מבצע אנטבה  אתר היסטוריה
             </p>
         </footer>
 </body>
